Fixes creature display layout and adds collapse / expand all buttons

--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,14 @@ li{
   justify-content: space-between;
 }
 
+.itemhead h3{
+  min-width: 50%;
+}
+
+.itemhead h4{
+  max-width: 30%;
+}
+
 .itemhead img{
   max-height: 60px;
 }
